[:monky:] refactoring all

--- a/fixtures/first.html
+++ b/fixtures/first.html
@@ -1,5 +1,5 @@
-<html class="test_second">
+<html class="second_black">
   <head>
-    <script src="second.css.js"></script>
+    <script src="second.black.css.js"></script>
   </head>
 </html>
